feat(backend): e2e tests and full creation of an ad (#29)
* adding webhooks

* removing precreating of an object in s3

* added local pusher to sqs to local stack

* added updating of ad from sqs

* added basic tests for created job

* adding sqs and a noop job test

* removing integration tests from pre commit since they started to take more time, fixed flutter analyze

* adding back integration tests

* started e2e tester project

* added running of our stack in docker container

* adding retry for migrations

* adding polly instead of dotnet retry

* implemented a test executor

* implementing parallelism

* optimize startup time for e2e tests

* implemented running multiple test environments

* further optimize tests

* refactoring test executor

* implementing batching

* adding some e2e tests

* adding table output

* added highest log level for testcontainers

* added create ad e2e test

* added e2e test for creating ad

* add docs, add tags to missing parts of stack

* add default env variables for docker compose down to run normally

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -60,10 +60,12 @@ repos:
         name: Flutter launcher tests
         entry: make flutter-test-launcher
         language: system
+        files: '\.(dart)$'
       - id: flutter-sotex_box-tests
         name: Flutter sotex_box tests
         entry: make flutter-test-box
         language: system
+        files: '\.(dart)$'
 
       ## Pulumi checks
       - id: pulumi-preview
