--- a/distribution/local/docker-compose.dev.yaml
+++ b/distribution/local/docker-compose.dev.yaml
@@ -7,6 +7,7 @@ services:
     links:
       - minio
       - postgres
+      - sqs
 
   minio:
     container_name: minio
@@ -16,7 +17,9 @@ services:
     environment:
       - MINIO_ROOT_USER=admin
       - MINIO_ROOT_PASSWORD=admin123
-      - MINIO_DEFAULT_BUCKETS='pre-processed'
+      - MC_HOST_local=http://admin:admin123@localhost:9000
+      - MINIO_NOTIFY_WEBHOOK_ENABLE_ADPOSTHOOK=on
+      - MINIO_NOTIFY_WEBHOOK_ENDPOINT_ADPOSTHOOK=http://local-pusher:5000/webhook
     ports:
       - 9000:9000
       - 9001:9001
@@ -29,6 +32,25 @@ services:
       test: mc ready local
       interval: 10s
       timeout: 3s
+
+  configureminio:
+    image: quay.io/minio/mc:RELEASE.2024-03-13T23-51-57Z
+    links:
+      - minio
+    restart: no
+    entrypoint: >
+      /bin/sh -c "
+      mc alias set local http://minio:9000 admin admin123 &&
+      buckets=("non-processed" "processed") &&
+      for bucket in "$${buckets[@]}"; do
+        mc mb local/"$$bucket" || true
+        mc anonymous set download local/"$$bucket" || true
+      done &&
+
+      mc event add local/non-processed arn:minio:sqs::ADPOSTHOOK:webhook --event put || true &&
+
+      exit 0;
+      "
 
   postgres:
     container_name: postgres
@@ -63,6 +85,19 @@ services:
       - ./infra/config/pgadmin/postgres.pass:/pgadmin4/postgres.pass
     depends_on:
       - postgres
+
+  sqs:
+    container_name: sqs
+    image: softwaremill/elasticmq-native:1.5.7
+    ports:
+      - 9324:9324
+      - 9325:9325
+    volumes:
+      - ./infra/config/sqs/elasticmq.conf:/opt/elasticmq.conf
+
+  local-pusher:
+    container_name: local-pusher
+    image: ghcr.io/sotex-lab/sotex-box/local-pusher:${COMMIT_SHA}
 
 volumes:
   postgres:
