--- a/dotnet/persistence/persistence.csproj
+++ b/dotnet/persistence/persistence.csproj
@@ -16,6 +16,8 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.2" />
+    <PackageReference Include="polly.core" Version="8.3.1" />
+    <PackageReference Include="polly.extensions" Version="8.3.1" />
   </ItemGroup>
 
   <PropertyGroup>
