feat(tv-emulator): Creating the optimal development environment  for Android TV (#31)
* saving

* saving

* finished making the tv

* added keyboard documentation

* makefile call

* added variable for android image

* ignored .gradle folder

--- a/.gitignore
+++ b/.gitignore
@@ -630,3 +630,5 @@ app.*.map.json
 /android/sotex_box/android/app/debug
 /android/sotex_box/android/app/profile
 /android/sotex_box/android/app/release
+
+/.gradle
