--- a/android/launcher/pubspec.yaml
+++ b/android/launcher/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_splash_screen: ^3.0.0
+  connectivity_plus: ^6.0.1
+  bloc: ^8.1.4
+  flutter_bloc: ^8.1.5
 
 dev_dependencies:
   flutter_test:
