--- a/android/sotex_box/android/app/src/main/AndroidManifest.xml
+++ b/android/sotex_box/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
     <application
         android:label="sotex_box"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/sotex_solutions">
         <activity
             android:name=".MainActivity"
             android:exported="true"
