adding device batcher

--- a/.env.template
+++ b/.env.template
@@ -81,3 +81,12 @@ NOOP_CRON="0/15 * * ? * *"
 # Interval at which backend will query sqs to
 # see if there are any new messages to be handled
 SQS_CRON="0/15 * * ? * *"
+
+# Interval at which backend will call devices for
+# their schedules.
+CALLFORSCHEDULE_CRON="0/15 * * ? * *"
+# Maximum amount of devices per batch that backend
+# will call at once. If the threshold is reached
+# backend will reduce the amount of letters in
+# a batch and recalculate.
+CALLFORSCHEDULE_DEVICE_THRESHOLD=100
