adding better implementation

--- a/.env.template
+++ b/.env.template
@@ -82,9 +82,10 @@ NOOP_CRON="0/15 * * ? * *"
 # see if there are any new messages to be handled
 SQS_CRON="0/15 * * ? * *"
 
-# Interval at which backend will call devices for
-# their schedules.
-CALLFORSCHEDULE_CRON="0/15 * * ? * *"
+# Max delay per device when the backend has to
+# call a device for schedule. This has to be able
+# to be parsed in a TimeSpan object
+CALLFORSCHEDULE_MAX_DELAY="00:01:00"
 # Maximum amount of devices per batch that backend
 # will call at once. If the threshold is reached
 # backend will reduce the amount of letters in
