--- a/android/launcher/pubspec.yaml
+++ b/android/launcher/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   connectivity_plus: ^6.0.1
   bloc: ^8.1.4
   flutter_bloc: ^8.1.5
+  url_launcher: ^6.2.5
+  app_settings: ^5.1.1
 
 dev_dependencies:
   flutter_test:
@@ -63,9 +65,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/sotex_solutions.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
