feat(backend): notify devices that they can call backend for new schedule (#38)
* changing messages from strings to enum commands

* change hangfire to store jobs in db

* started work on call for schedule job

* adding device batcher

* failed attempt

* adding better implementation

* started writing tests

* new implementation of batching

* adding unit tests

* adding debug log message

* fixing enquing of jobs

* adding env bag

* adding calling for schedule for batch

* adding better pagination formula

--- a/dotnet/backend/backend.csproj
+++ b/dotnet/backend/backend.csproj
@@ -14,8 +14,8 @@
     <PackageReference Include="Hangfire.AspNetCore" Version="1.8.11" />
     <PackageReference Include="Hangfire.Core" Version="1.8.11" />
     <PackageReference Include="Hangfire.InMemory" Version="0.8.0" />
+    <PackageReference Include="Hangfire.PostgreSql" Version="1.20.8" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.1" />
-    <PackageReference Include="NCrontab" Version="3.3.3" />
     <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.7.0" />
     <PackageReference Include="OpenTelemetry.Exporter.Prometheus.AspNetCore" Version="1.7.0-rc.1" />
     <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.7.0" />
