--- a/.env.template
+++ b/.env.template
@@ -65,3 +65,29 @@ AWS_SQS_NONPROCESSED_QUEUE_URL=/000000000000/nonprocessed
 # at false but tests should cover it being at true
 # as well.
 REQUIRE_KNOWN_DEVICES=false
+
+### CRON SETUP
+### For all crons we use crontab which and all crons
+### have to be vaild according to this formatter
+### https://www.freeformatter.com/cron-expression-generator-quartz.html
+### These values don't have to be specified and in that
+### case the default value of "0/15 * * ? * *" will
+### be used. For tests its required to specify them.
+
+# Interval at which backend will send noop signal
+# to all connected devices
+NOOP_CRON="0/15 * * ? * *"
+
+# Interval at which backend will query sqs to
+# see if there are any new messages to be handled
+SQS_CRON="0/15 * * ? * *"
+
+# Max delay per device when the backend has to
+# call a device for schedule. This has to be able
+# to be parsed in a TimeSpan object
+CALLFORSCHEDULE_MAX_DELAY="00:01:00"
+# Maximum amount of devices per batch that backend
+# will call at once. If the threshold is reached
+# backend will reduce the amount of letters in
+# a batch and recalculate.
+CALLFORSCHEDULE_DEVICE_THRESHOLD=100
