adding job for calculating schedule

--- a/.env.template
+++ b/.env.template
@@ -91,3 +91,9 @@ CALLFORSCHEDULE_MAX_DELAY="00:01:00"
 # backend will reduce the amount of letters in
 # a batch and recalculate.
 CALLFORSCHEDULE_DEVICE_THRESHOLD=100
+
+# Maximum amount of ads to include in the batch
+CALCULATESCHEDULEFOR_DEVICE_THRESHOLD=10
+# Local path for calculated schedules which will
+# be served to devices
+CALCULATESCHEDULEFOR_DEVICE_LOCALPATH=/schedules
