returning to in memory hangfire storage

--- a/.env.template
+++ b/.env.template
@@ -97,3 +97,5 @@ CALCULATESCHEDULEFOR_DEVICE_THRESHOLD=10
 # Local path for calculated schedules which will
 # be served to devices
 CALCULATESCHEDULEFOR_DEVICE_LOCALPATH=/backend/mounted/schedules
+# Expiration timespan for the presigned urls of ads
+CALCULATESCHEDULEFOR_URL_EXPIRE="01:00:00"
