--- a/android/launcher/pubspec.yaml
+++ b/android/launcher/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   flutter_bloc: ^8.1.5
   url_launcher: ^6.2.5
   app_settings: ^5.1.1
+  logger: ^2.2.0
+  mocktail: ^1.0.3
 
 dev_dependencies:
   flutter_test:
@@ -52,6 +54,9 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  test: ^1.24.9
+  bloc_test: ^9.1.7
+  build_runner: ^2.4.9
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
