--- a/android/launcher/pubspec.yaml
+++ b/android/launcher/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   app_settings: ^5.1.1
   logger: ^2.2.0
   mocktail: ^1.0.3
+  eventflux: ^1.6.9
 
 dev_dependencies:
   flutter_test:
