feat(backend): Calculation of schedule (#42)
* adding job for calculating schedule

* fixing skipwhile

* returning to in memory hangfire storage

* fixing call for schedule job

* adding unit tests for calculatin schedule for devices

* adding unit tests for the job

* migrating to using a bucket for schedules

* fixing take from entity framework implementation

* adding controller for getting presigned url

* adding e2e test for getting schedule

* add bigger test

* refactoring schedule job

* fixing e2e test

* adding test for getting schedule

--- a/.env.template
+++ b/.env.template
@@ -85,9 +85,14 @@ SQS_CRON="0/15 * * ? * *"
 # Max delay per device when the backend has to
 # call a device for schedule. This has to be able
 # to be parsed in a TimeSpan object
-CALLFORSCHEDULE_MAX_DELAY="00:01:00"
+SCHEDULE_MAX_DELAY="00:01:00"
 # Maximum amount of devices per batch that backend
 # will call at once. If the threshold is reached
 # backend will reduce the amount of letters in
 # a batch and recalculate.
-CALLFORSCHEDULE_DEVICE_THRESHOLD=100
+SCHEDULE_DEVICE_THRESHOLD=100
+
+# Maximum amount of ads to include in the batch
+SCHEDULE_AD_THRESHOLD=10
+# Expiration timespan for the presigned urls of ads
+SCHEDULE_URL_EXPIRE="01:00:00"
