--- a/distribution/local/docker-compose.dev.yaml
+++ b/distribution/local/docker-compose.dev.yaml
@@ -41,7 +41,7 @@ services:
     entrypoint: >
       /bin/sh -c "
       mc alias set local http://minio:9000 admin admin123 &&
-      buckets=("non-processed" "processed") &&
+      buckets=("non-processed" "processed" "schedule") &&
       for bucket in "$${buckets[@]}"; do
         mc mb local/"$$bucket" || true
         mc anonymous set download local/"$$bucket" || true
