turned buckets into fetchable names from env

--- a/.env.template
+++ b/.env.template
@@ -66,6 +66,15 @@ AWS_SQS_NONPROCESSED_QUEUE_URL=/000000000000/nonprocessed
 # as well.
 REQUIRE_KNOWN_DEVICES=false
 
+### BUCKET SETUP
+### Required since S3 doesn't allow
+# Bucket where processed videos will be stored
+PROCESSED_BUCKET_NAME="processed"
+# Bucket where nonprocessed videos will be stored
+NON_PROCESSED_BUCKET_NAME="non-processed"
+# Bucket for schedules
+SCHEDULE_BUCKET_NAME="schedule"
+
 ### CRON SETUP
 ### For all crons we use crontab which and all crons
 ### have to be vaild according to this formatter
