--- a/android/launcher/pubspec.yaml
+++ b/android/launcher/pubspec.yaml
@@ -36,7 +36,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_splash_screen: ^3.0.0
+  connectivity_plus: ^6.0.1
+  bloc: ^8.1.4
+  flutter_bloc: ^8.1.5
+  url_launcher: ^6.2.5
+  app_settings: ^5.1.1
   logger: ^2.2.0
+  mocktail: ^1.0.3
 
 dev_dependencies:
   flutter_test:
@@ -48,6 +54,9 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  test: ^1.24.9
+  bloc_test: ^9.1.7
+  build_runner: ^2.4.9
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -61,9 +70,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/sotex_solutions.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
