finishing thought about s3 buckets

--- a/.env.template
+++ b/.env.template
@@ -68,6 +68,9 @@ REQUIRE_KNOWN_DEVICES=false
 
 ### BUCKET SETUP
 ### Required since S3 doesn't allow
+### for arbitrary bucket creation on the fly
+### (With reliable names).
+
 # Bucket where processed videos will be stored
 PROCESSED_BUCKET_NAME="processed"
 # Bucket where nonprocessed videos will be stored
