--- a/android/launcher/pubspec.yaml
+++ b/android/launcher/pubspec.yaml
@@ -31,7 +31,6 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -43,6 +42,7 @@ dependencies:
   app_settings: ^5.1.1
   logger: ^2.2.0
   mocktail: ^1.0.3
+  eventflux: ^1.6.9
 
 dev_dependencies:
   flutter_test:
