Recieved schedule from the backend.

--- a/android/launcher/pubspec.yaml
+++ b/android/launcher/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   logger: ^2.2.0
   mocktail: ^1.0.3
   eventflux: ^1.6.9
+  http: ^1.2.1
+  dio: ^5.4.3+1
 
 dev_dependencies:
   flutter_test:
