--- a/android/launcher/pubspec.yaml
+++ b/android/launcher/pubspec.yaml
@@ -45,6 +45,11 @@ dependencies:
   eventflux: ^1.6.9
   http: ^1.2.1
   dio: ^5.4.3+1
+  sqflite: ^2.3.3
+  path_provider: ^2.1.3
+  path: ^1.9.0
+  sqflite_common_ffi: ^2.3.3
+  sqlite3_flutter_libs: ^0.5.21
 
 dev_dependencies:
   flutter_test:
