--- a/android/launcher/pubspec.yaml
+++ b/android/launcher/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   path: ^1.9.0
   sqflite_common_ffi: ^2.3.3
   sqlite3_flutter_libs: ^0.5.21
+  tuple: ^2.0.2
 
 dev_dependencies:
   flutter_test:
