--- a/android/launcher/pubspec.yaml
+++ b/android/launcher/pubspec.yaml
@@ -51,6 +51,9 @@ dependencies:
   sqflite_common_ffi: ^2.3.3
   sqlite3_flutter_libs: ^0.5.21
   tuple: ^2.0.2
+  video_player: ^2.8.6
+  chewie: ^1.8.1
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
