--- a/android/launcher/pubspec.yaml
+++ b/android/launcher/pubspec.yaml
@@ -43,6 +43,17 @@ dependencies:
   logger: ^2.2.0
   mocktail: ^1.0.3
   eventflux: ^1.6.9
+  http: ^1.2.1
+  dio: ^5.4.3+1
+  sqflite: ^2.3.3
+  path_provider: ^2.1.3
+  path: ^1.9.0
+  sqflite_common_ffi: ^2.3.3
+  sqlite3_flutter_libs: ^0.5.21
+  tuple: ^2.0.2
+  video_player: ^2.8.6
+  chewie: ^1.8.1
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
