--- a/android/launcher/pubspec.yaml
+++ b/android/launcher/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   video_player: ^2.8.6
   chewie: ^1.8.1
   equatable: ^2.0.5
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
