--- a/android/launcher/pubspec.yaml
+++ b/android/launcher/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   chewie: ^1.8.1
   equatable: ^2.0.5
   intl: ^0.19.0
+  external_path: ^1.0.3
 
 dev_dependencies:
   flutter_test:
