--- a/.dockerignore
+++ b/.dockerignore
@@ -1,11 +1,13 @@
-.cache
-.config
-.github
-BenchmarkDotNet.Artifacts
-docs
-android
-load-tests
+.cache/
+.config/
+.github/
+BenchmarkDotNet.Artifacts/
+docs/
+launcher/
+load-tests/
+volumes.local/
+.pixi/
 
-bin/
-obj/
-out/
+**/bin/
+**/obj/
+**/out/
