--- a/.github/workflows/flutter-launcher.yaml
+++ b/.github/workflows/flutter-launcher.yaml
@@ -6,7 +6,7 @@ on:
       - main
   pull_request:
     paths:
-      - "android/**"
+      - "launcher/**"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
@@ -18,7 +18,7 @@ jobs:
     strategy:
       matrix:
         app:
-          - directory: "./android/launcher"
+          - directory: "./launcher"
             name: launcher
     steps:
     - name: Checkout Repository
