--- a/launcher/android/app/src/main/AndroidManifest.xml
+++ b/launcher/android/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
         android:label="launcher"
         android:name="${applicationName}"
         android:icon="@mipmap/sotex_solutions"
+        android:requestLegacyExternalStorage="true"
         android:usesCleartextTraffic="true">
         <activity
             android:name=".MainActivity"
