--- a/launcher/pubspec.yaml
+++ b/launcher/pubspec.yaml
@@ -42,7 +42,7 @@ dependencies:
   app_settings: ^5.1.1
   logger: ^2.2.0
   mocktail: ^1.0.3
-  eventflux: ^1.6.9
+  eventflux: ^2.2.1
   http: ^1.2.1
   dio: ^5.4.3+1
   sqflite: ^2.3.3
@@ -55,7 +55,8 @@ dependencies:
   chewie: ^1.8.1
   equatable: ^2.0.5
   intl: ^0.19.0
-  external_path: ^1.0.3
+  external_path: ^2.0.1
+  shared_preferences: ^2.3.2
 
 dev_dependencies:
   flutter_test:
@@ -66,7 +67,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^5.0.0
   test: ^1.24.9
   bloc_test: ^9.1.7
   build_runner: ^2.4.9
