- added standalone output for nextjs to work in a docker container - added dev.Dockerfile and prod.Dockerfile for nextjs - nginx gw config extended to support next urls - public assets moved to a assets folder to make it easier to server static files - compose-up phony in makefile extended with  to allow for extra flags like --build and -d - extended docker-compose prod and dev files to support nextjs - tsconfig had to be complete in order for nextjs to be dockerized, removed extend but kept the compiler config the same

--- a/distribution/local/docker-compose.dev.yaml
+++ b/distribution/local/docker-compose.dev.yaml
@@ -1,4 +1,9 @@
 services:
+  frontend:
+    build:
+      context: ./web
+      dockerfile: dev.Dockerfile
+
   backend:
     environment:
       - ASPNETCORE_ENVIRONMENT=test
