--- a/infra/config/nginx/gateway.conf
+++ b/infra/config/nginx/gateway.conf
@@ -1,6 +1,6 @@
 map ${DOLLAR}http_upgrade ${DOLLAR}connection_upgrade {
-	default upgrade;
-	'' close;
+    default upgrade;
+    '' close;
 }
 
 server {
@@ -16,26 +16,39 @@ server {
     location / {
         mirror_request_body on;
         proxy_set_header X-Forwarded-For ${DOLLAR}remote_addr;
+        proxy_pass http://frontend:3000;
+    }
+
+    location ~ ^(/assets|/_next) {
+        mirror_request_body on;
+        proxy_set_header X-Forwarded-For ${DOLLAR}remote_addr;
+        proxy_pass http://frontend:3000;
+    }
+
+    location /api {
+        mirror_request_body on;
+        proxy_set_header X-Forwarded-For ${DOLLAR}remote_addr;
+        rewrite ^/api/(.*)$ /$1 break;
         proxy_pass http://backend:8080;
     }
 
-	location /event {
-		proxy_pass http://backend:8080;
-		proxy_buffering off;
-    	proxy_cache off;
-    	proxy_set_header Host ${DOLLAR}host;
-	}
+    location /event {
+        proxy_pass http://backend:8080;
+        proxy_buffering off;
+        proxy_cache off;
+        proxy_set_header Host ${DOLLAR}host;
+    }
 
     location /prometheus {
         proxy_pass http://prometheus:9090;
     }
 
     location /grafana/ {
-		proxy_pass http://grafana:3000;
-		proxy_set_header Host ${DOLLAR}http_host;
+        proxy_pass http://grafana:3000;
+        proxy_set_header Host ${DOLLAR}http_host;
     }
 
-	location /grafana/api/live/ {
+    location /grafana/api/live/ {
         proxy_http_version 1.1;
         proxy_set_header Upgrade ${DOLLAR}http_upgrade;
         proxy_set_header Connection ${DOLLAR}connection_upgrade;
