--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -1,6 +1,27 @@
 {
-  "extends": "../tsconfig.json", // Path to the top-level tsconfig.json
   "compilerOptions": {
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "strictPropertyInitialization": false,
+    "resolveJsonModule": true,
+    "experimentalDecorators": true,
+    "incremental": true,
+    "declaration": true,
+    "allowJs": true,
+    "noEmit": true,
+    "strict": true,
+    "allowUnusedLabels": false,
+    "allowUnreachableCode": false,
+    "exactOptionalPropertyTypes": true,
+    "noFallthroughCasesInSwitch": true,
+    "noImplicitOverride": true,
+    "noImplicitReturns": true,
+    "noPropertyAccessFromIndexSignature": true,
+    "noUncheckedIndexedAccess": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "isolatedModules": true,
+    "checkJs": true,
     "baseUrl": ".",
     "paths": {
       "@/*": [
